cs21b027_lab5/y.output
Grammar

    0 $accept: input $end

    1 input: date SEMICOLON input
    2      | rest SEMICOLON input
    3      | date
    4      | rest
    5      | ε

    6 rest: OTHER

    7 date: PROPER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROPER (258) 7
    OTHER (259) 6
    SEMICOLON (260) 1 2


Nonterminals, with rules where they appear

    $accept (6)
        on left: 0
    input (7)
        on left: 1 2 3 4 5
        on right: 0 1 2
    rest (8)
        on left: 6
        on right: 2 4
    date (9)
        on left: 7
        on right: 1 3


State 0

    0 $accept: • input $end

    PROPER  shift, and go to state 1
    OTHER   shift, and go to state 2

    $default  reduce using rule 5 (input)

    input  go to state 3
    rest   go to state 4
    date   go to state 5


State 1

    7 date: PROPER •

    $default  reduce using rule 7 (date)


State 2

    6 rest: OTHER •

    $default  reduce using rule 6 (rest)


State 3

    0 $accept: input • $end

    $end  shift, and go to state 6


State 4

    2 input: rest • SEMICOLON input
    4      | rest •

    SEMICOLON  shift, and go to state 7

    $default  reduce using rule 4 (input)


State 5

    1 input: date • SEMICOLON input
    3      | date •

    SEMICOLON  shift, and go to state 8

    $default  reduce using rule 3 (input)


State 6

    0 $accept: input $end •

    $default  accept


State 7

    2 input: rest SEMICOLON • input

    PROPER  shift, and go to state 1
    OTHER   shift, and go to state 2

    $default  reduce using rule 5 (input)

    input  go to state 9
    rest   go to state 4
    date   go to state 5


State 8

    1 input: date SEMICOLON • input

    PROPER  shift, and go to state 1
    OTHER   shift, and go to state 2

    $default  reduce using rule 5 (input)

    input  go to state 10
    rest   go to state 4
    date   go to state 5


State 9

    2 input: rest SEMICOLON input •

    $default  reduce using rule 2 (input)


State 10

    1 input: date SEMICOLON input •

    $default  reduce using rule 1 (input)
